# 7modul_ToDoList

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy_on_main.yaml  push_any_except_main.yaml
bot/: models.py  serializers.py
bot/commands/: runbot.py
bot/management/: chat.py  condition.py
bot/migrations/: 0001_initial.py  0002_tguser_verification_code.py
bot/tg/: client.py  dc.py
core/: admin.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_remove_user_avatar.py
deploy/: docker-compose.yaml
goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py
goals/migrations/: 0001_initial.py  0002_goal_goalcomment.py  0003_rename_deadline_date_goal_due_date.py  0004_board_goalcategory_board_boardparticiant.py  0005_rename_boardparticiant_boardparticipant.py  0006_create_new_objects.py  0007_alter_goalcategory_board.py
goals/views/: board.py  category.py  comment.py  goal.py
todolist/: settings.py  urls.py
